--- a/src/news/news.css
+++ b/src/news/news.css
@@ -1,3 +1,6 @@
+p{
+  margin-bottom: 0;
+}
 .main-header{
     display: flex;
     justify-content: space-between;
@@ -5,6 +8,7 @@
     width: 100%;
     background-color: #FFB03A;
   margin-bottom: 20px;
+  height: 80px;
 }
 .logo-label{
     display: flex;
@@ -26,14 +30,14 @@
   mix-blend-mode: normal;
   background-color: #ffffff;
   display: flex;
-
+  font-size: 12px;
   flex-direction: row;
   gap: 6px;
   height: 35px;
   justify-content: center;
   align-items: center;
   border-radius: 3px;
-  padding: 4px 0px;
+
   transition: all 2s linear 0s;
 }
 .searchbar{
@@ -47,21 +51,22 @@
   color:black;
   font-weight:bolder;
   width:60px;
-  margin-top: 3px;
+padding-top: 5px;
+  font-size: 12px;
 }
 .secondpage-search{
   color:black;
   width:140px;
-  margin-top: 3px;
+  padding-top: 5px;
+  font-size: 12px;
 }
 .name{
   display: flex;
   flex-direction: row;
   gap: 6px;
-  
 }
 .namevalue{
-  font-size: 14px;
+  font-size: 12px;
   margin-bottom: 0%;
 
 }
@@ -69,10 +74,10 @@
 .news-addition{
     display: flex;
     gap: 5px;
-    padding-top: 2px;
-    padding-bottom: 2px;
+  
     height: 30px;
-
+  font-size: 12px;
+  align-items: center;
 }
 .button2{
   width: 110px;
@@ -88,7 +93,7 @@
       transition: all .2s linear 0s;
 }
 .button3{
-  width: 135px;
+  width: 119px;
       mix-blend-mode: normal;
       background-color: #ffffff;
       display: flex;
@@ -105,7 +110,7 @@
 .plus{
     width: 20px;
     height: 20px;
-    margin-top: 2px;
+ 
 }
 .secondpage{
     background: linear-gradient(180deg, #ffffff 0%, #ff9c08 100%),
@@ -121,7 +126,7 @@
     background-color: #ffffff;
     align-items: center;
     border-radius: 15px;
-   
+    font-weight: 600;
     width: 87%;
     right: 0%;
     left: 0%;
