--- a/src/Service/Service.css
+++ b/src/Service/Service.css
@@ -24,8 +24,8 @@
   align-items: center;
 }
 .thirdpage-first-img {
-  width: 110px;
-  height: 78px;
+  width: 88px;
+  height: 68px;
   mix-blend-mode: normal;
 }
 .thirdpage-text1 {
@@ -36,18 +36,22 @@
 }
 .thirdpage-whitebox {
   width: 100%;
-  max-width: 155px;
+  max-width: 119px;
   mix-blend-mode: normal;
   background-color: #ffffff;
   display: flex;
   height: 30px;
   flex-direction: row;
-
+ font-size: 12px;
   justify-content: center;
   align-items: center;
   border-radius: 3px;
-  padding: 4px 0px;
+
   transition: all 2s linear 0s;
+}
+.thirdpage-heading-information-logo{
+height: 68px;
+width: 88px;
 }
 .thirdpage-text3 {
   mix-blend-mode: normal;
@@ -99,10 +103,11 @@
 display: flex;
 flex-direction: row;
 align-items: center;
-margin-top: 10px;
+margin: 10px 0px;
 }
 .thirdpage-heading-information-label{
   margin-bottom: 0px;
+  font-size: 20px;
 }
 .thirdpage-detail-information{
     display: flex;
@@ -118,12 +123,13 @@ margin-top: 10px;
  }
  .thirdpage-detail-options{
     width: 90px;
+    font-size: 16px;
  }
 .thirdpage-person-name,.thirdpage-person-place,.thirdpage-person-status,.thirdpage-person-rollno{
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-
+   margin-bottom: 10px;
 }
 .thirdpage-person-image{
     width: 100px;
@@ -180,8 +186,8 @@ margin-top: 10px;
     top: 50px;
   
   }
-  .image4{
-    margin-bottom: 30px;
+  .image4,.image10,.image13{
+padding-bottom: 24px;
   }
   .service45{
     left: 589px;
@@ -830,10 +836,7 @@ margin-top: 10px;
      .thirdpage-text1{
       font-size: 26px;
      }
-     .thirdpage-first-img{
-      width: 100px;
-      height: 80px;
-     }
+
      .thirdpage-card-section{
       display: flex;
       flex-direction: column;
@@ -873,7 +876,12 @@ margin-top: 10px;
       top: 930px;
       width: 750px;
      }
- 
+ .thirdpage-detail-information{
+  padding: 0px 50px;
+ }
+ .thirdpage-heading-information{
+  padding: 0px 30px;
+ }
     .service41,.service42,.service43,.service44,.service45,.service46,.service47,.service48,.service49,.service410,.service411,.service412,.service413,.service414,.service415,.service416,.service417,.service418,.service419,.service420,.service421,.service422,.service423,.service424,.service425,.service426,.service427{
       width: 130px;
       height: 135px;
@@ -998,6 +1006,7 @@ margin-top: 10px;
      .thirdpage-detail-options{
       min-width: 175px;
       width: 100%;
+      font-size: 18px;
      }
      .thirdpage-person-image{
       height: 150px;
@@ -1158,12 +1167,12 @@ margin-top: 10px;
       gap: 11%;
     }
     .thirdpage-detail-options{
-      font-size: 24px;
+      font-size: 18px;
       min-width: 140px;
       width: 100%;
     }
     .thirdpage-heading-information-label{
-      font-size: 28px;
+      font-size: 24px;
     }
     .thirdpage-whiteblock{
       height: 1255px;
@@ -1569,6 +1578,12 @@ margin-top: 10px;
         min-width: 115px;
         width: 100%;
       }
+      .thirdpage-detail-information{
+        padding: 0px 20px;
+       }
+       .thirdpage-heading-information{
+        padding: 0px;
+       }
   }
   @media (max-width:480px) {
     .thirdpage-card-section-image{
@@ -1594,7 +1609,7 @@ margin-top: 10px;
      .thirdpage-person-name,.thirdpage-person-thirdpage-place,.thirdpage-person-rollno,.thirdpage-person-status{
   
      
-     margin-bottom: 0px;
+     margin-bottom: 10px;
      }
      .thirdpage-detail-options{
       min-width: 45px;
