--- a/src/Firstpage/Firstpage.css
+++ b/src/Firstpage/Firstpage.css
@@ -140,6 +140,7 @@ width: 100px;
 height: 105px;
 box-shadow: 4px 4px 4px 2px rgba(231, 150, 7, 0.3);
 position: absolute;
+padding-bottom: 15px;
 }
 
 .fifthpage-options-values{
