--- a/src/Service/Service.css
+++ b/src/Service/Service.css
@@ -1,9 +1,10 @@
 .thirdpage{
-  height: 1235px;
+  height: 1335px;
   width: 100%;
+  background-color: #F5F4F4;
 }
 .thirdpage-main-content{
-  height: 1190px;
+  height: 1290px;
   width: 100%;
 }
 .thirdpage-header-section {
@@ -72,7 +73,7 @@ margin: 0px 0px 9px 0px;
 .thirdpage-card-section{
 display: flex;
 flex-direction: row;
-height: 646px; 
+height: 360px; 
 background-image: linear-gradient(
   180deg,
   rgba(217, 217, 217, 0) 0%,
@@ -137,14 +138,14 @@ font-size: 20px;
 }
 .thirdpage-card-section-image{
   height: 270px;
-  width: 868px;
+  width: 869px;
  
 }
 /*thirdpage whiteblock*/
 .thirdpage-whiteblock{
 position: absolute;
 height: 560px;   
-width: 1310px;
+width: 1311px;
 top: 444px;
 left: 0;
 right: 0;
@@ -162,7 +163,7 @@ justify-content: center;
 align-items: center;
 border: 2px solid  #e78d07;
 border-radius: 15px;
-width: 240px;
+width: 300px;
 height: 85px;
 padding: 15px 20px;
 box-shadow: 4px 4px 4px 2px rgba(231, 150, 7, 0.3);
@@ -178,108 +179,108 @@ transform: scale(1.05);
   top: 30px;
 }
 .service42{
-  left: 267.5px;
+  left: 337px;
   top: 30px;
 }
 .service43{
-  left: 535px;
+  left: 674px;
   top: 30px;
 }
 .service44{
-  left: 802.5px;
+  left: 1011px;
   top: 30px;
 
 }
 .service45{
-  left: 1070px;
-  top: 30px;
+  left: 674px;
+  top: 605px;
 }
 .service46{
   left: 0px;
   top: 145px;
 }
 .service47{
-  left:267.5px;
+  left:337px;
   top:145px;
 }
 .service48{
-  left: 535px;
+  left: 674px;
   top: 145px;
 }
 .service49{
-  left: 802.5px;
+  left: 1011px;
   top: 145px;
 }
 .service410{
-  left: 1070px;
-  top: 145px;
+  left: 1011px;
+  top: 605px;
 }
 .service411{
   left: 0px;
   top: 260px;
 }
 .service412{
-  left: 267.5px;
+  left: 337px;
   top: 260px;
 }
 .service413{
-  left: 535px;
+  left: 674px;
   top: 260px;
 }
 .service414{
-  left: 802.5px;
+  left: 1011px;
   top: 260px;
 }
 .service415{
-  left: 1070px;
-  top: 260px;
+  left: 0px;
+  top: 720px;
 }
 .service416{
   left: 0px;
   top: 375px;
 }
 .service417{
-  left: 267.5px;
+  left: 337px;
   top: 375px;
 }
 .service418{
-  left: 535px;
+  left: 674px;
   top: 375px;
 }
 .service419{
-  left: 802.5px;
+  left: 1011px;
   top: 375px;
 }
 .service420{
-  left: 1070px;
-  top: 375px;
+  left: 337px;
+  top: 720px;
 }
 .service421{
   left: 0px;
   top: 490px;
 }
 .service422{
-  left: 267.5px;
+  left: 337px;
   top: 490px;
 }
 .service423{
-  left: 535px;
+  left: 674px;
   top: 490px;
 }
 .service424{
-  left: 802.5px;
+  left: 1011px;
   top: 490px;
 }
 .service425{
-  left: 1070px;
-  top:490px;
+  left: 674px;
+  top:720px;
 }
 .service426{
   left: 0px;
   top:605px;
 }
 .service427{
-  left: 267.5px;
+  left: 337px;
   top: 605px;
 }
 .thirdpage-description-reason{
@@ -309,13 +310,13 @@ transform: scale(1.05);
     width: 1190px;
   }
   .thirdpage{
-    height: 1235px;
+    height: 1335px;
   }
   .thirdpage-main-content{
-    height: 1190px;
+    height: 1290px;
   }
   .service41,.service42,.service43,.service44,.service45,.service46,.service47,.service48,.service49,.service410,.service411,.service412,.service413,.service414,.service415,.service416,.service417,.service418,.service419,.service420,.service421,.service422,.service423,.service424,.service425,.service426,.service427{
-    width: 220px;
+    width: 270px;
     height: 85px;
     gap: 20px;
     }
@@ -326,109 +327,108 @@ transform: scale(1.05);
       top: 30px;
     }
     .service42{
-      left: 242.5px;
+      left: 305px;
       top: 30px;
     }
     .service43{
-      left: 485px;
+      left: 610px;
       top: 30px;
     }
     .service44{
-      left: 727.5px;
+      left: 915px;
       top: 30px;
     
     }
- 
     .service45{
-      left: 970px;
-      top: 30px;
+      left: 610px;
+      top: 605px;
     }
     .service46{
       left: 0px;
       top: 145px;
     }
     .service47{
-      left:242.5px;
+      left:305px;
       top:145px;
     }
     .service48{
-      left: 485px;
+      left: 610px;
       top: 145px;
     }
     .service49{
-      left: 727.5px;
+      left: 915px;
       top: 145px;
     }
     .service410{
-      left: 970px;
-      top: 145px;
+      left: 915px;
+      top: 605px;
     }
     .service411{
       left: 0px;
       top: 260px;
     }
     .service412{
-      left: 242.5px;
+      left: 305px;
       top: 260px;
     }
     .service413{
-      left: 485px;
+      left: 610px;
       top: 260px;
     }
     .service414{
-      left: 727.5px;
+      left: 915px;
       top: 260px;
     }
     .service415{
-      left: 970px;
-      top: 260px;
+      left: 0px;
+      top: 720px;
     }
     .service416{
       left: 0px;
       top: 375px;
     }
     .service417{
-      left: 242.5px;
+      left: 305px;
       top: 375px;
     }
     .service418{
-      left: 485px;
+      left: 610px;
       top: 375px;
     }
     .service419{
-      left: 727.5px;
+      left: 915px;
       top: 375px;
     }
     .service420{
-      left: 970px;
-      top: 375px;
+      left: 305px;
+      top: 720px;
     }
     .service421{
       left: 0px;
       top: 490px;
     }
     .service422{
-      left: 242.5px;
+      left: 305px;
       top: 490px;
     }
     .service423{
-      left: 485px;
+      left: 610px;
       top: 490px;
     }
     .service424{
-      left: 727.5px;
+      left: 915px;
       top: 490px;
     }
     .service425{
-      left: 970px;
-      top:490px;
+      left: 610px;
+      top:720px;
     }
     .service426{
       left: 0px;
       top:605px;
     }
     .service427{
-      left: 242.5px;
+      left: 305px;
       top: 605px;
     }
     
@@ -868,7 +868,7 @@ transform: scale(1.05);
     height: 1985px;
    }
    .thirdpage-card-section{
-    height: 1250px;
+    height: 890px;
    }
    .thirdpage-card-section-image{
     width: 750px;
@@ -1197,6 +1197,9 @@ padding: 0px 30px;
     min-width: 140px;
     width: 100%;
   }
+  .thirdpage-card-section{
+    height: 830px;
+   }
   .thirdpage-heading-information-label{
     font-size: 24px;
   }
@@ -1336,6 +1339,7 @@ padding: 0px 30px;
   .thirdpage-card-section-image{
     width: 450px;
     height: 330px;
+    margin-top: 0px;
   }
   .thirdpage-information-card{
     width: 450px;
@@ -1350,6 +1354,7 @@ padding: 0px 30px;
     }
   .thirdpage-card-section{
     gap: 50px;
+    height: 790px;
   }
   .thirdpage{
     height: 2560px;
@@ -1498,6 +1503,7 @@ padding: 0px 30px;
   .thirdpage-card-section-image{
     width: 380px;
     height: 300px;
+    margin-top: 0px;
   }
   .thirdpage-whiteblock{
     top: 780px;
@@ -1511,6 +1517,7 @@ padding: 0px 30px;
   }
   .thirdpage-card-section{
     gap: 50px;
+    height: 730px;
   }
   .thirdpage-heading-information-label{
     font-size: 17px;
